# IoT

./: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults  sdkconfig.old  硬件连接指南.md  硬件连接检查清单.md  课程设计报告.md  项目设计方案.md
dashboard/: index.html
main/: CMakeLists.txt  app_config.h  bsp.c  bsp.h  driver_aht20.c  driver_aht20.h  driver_light_sensor.c  driver_light_sensor.h  driver_mq2.c  driver_mq2.h  driver_radar.c  driver_radar.h  driver_rgb_led.c  driver_rgb_led.h  main.c
